public/css/style.css
body {
  widows: 100vw;
  font-size: 14px; 
  font-family: 'Encode Sans Expanded', 'Helvetica', 'Arial', sans-serif;
  background: rgb(120,255,255);
}

.container {
  margin: 2px auto;
  max-width: 500px;
  display: flex;
  flex-direction: column;  
}

.dashboard-content {
  margin: 4px;
  padding: 4px;
  height: 40vh;
  background: rgb(120,255,255);
  display: flex;
  flex-direction: column;
  justify-content: space-around;
} 

.title-content, .scroll-content {
  margin: 2px auto;
  width: 98%;
  background: rgb(161,230,150);
} 

.title-content {
  height: 70px;
}

nav {
  width: 100%;
  display: flex;
  justify-content: space-between;
}

.game-nav-left, .game-nav-right {
  width: 130px;
  text-align: center;
}

.sim-content {
  width: 70px;
  height: 70px;
  border: 2px dashed rgba(0,0,0,.25);
  display: flex;
  align-self: center;
  justify-content: center;
  align-items: center;
}

.sim-placeholder {
  width: 40%;
  height: 40%;
}

div, label {
  padding: 4px;
  margin: 2px;
  border-radius: 8px; 
} 

.listen, .homes-content, .avatar-button {
  margin: 4px;
  background: azure; 
  border: 2px solid rgba(240,200,240,.6)
}

form, input {
  width: 95%;
  margin: 1px auto;
  display: inline-block;
  border: none;
  text-align: center;
}

input {
  height: 14px;
}

h1 {
  font-size: 28px;
}

h1, h2, h3, h4, h5 {  
  font-family: 'Merienda', 'Helvetica', 'Arial', sans-serif;
  text-align: center;
  font-weight: 900;
}

h4 {
  display: inline;
  text-align: unset;
}

a {
  text-decoration: none;
  font-weight: 900;
}

p.caption-header {
  margin: 4px 2px;
  padding: 2px;
  text-align: center;
}

.caption-details {
  font-variant: small-caps;
}

.avatar-button {
  margin: 6px;
}

.homes-header {
  margin: 4px auto;
  width: 95%;
  font-size: 1.17em;
  border-bottom: 2px dashed rgba(0,0,0,.25);
}

ul {
  margin: 4px;
  padding 4px;
}

img.bullet-icon {
  height: 12px;
  display: inline;
}

.avatar-submit {
  height: 55px;
  color: #0000EE;
  background-color: rgba(240, 255, 255, 0);
  font-size: 1.17em;
  font-family: 'Merienda', 'Helvetica', 'Arial', sans-serif;
  font-weight: 900;
  display: block;
}

.new-home-view, .new-land-view {
  height: 50vh;
}

.listen:hover, .listen:active, .avatar-button:hover, .avatar-button:active {
  background: rgb(250,245,220); 
} 

